--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tera Guard - A better anti-virus & web security!</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="https://img.icons8.com/external-kiranshastry-gradient-kiranshastry/64/000000/external-malware-coding-kiranshastry-gradient-kiranshastry-1.png"
+      type="image/x-icon"
+    />
     <!-- Google font -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
