--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tera Guard - A better anti-virus & web security!</title>
     <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      href="https://img.icons8.com/external-kiranshastry-gradient-kiranshastry/64/000000/external-malware-coding-kiranshastry-gradient-kiranshastry-1.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon" />
     <!-- Google font -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
@@ -395,8 +391,10 @@
           <a class="footer__link" href="#">Contact Us</a>
         </li>
       </ul>
+      <img src="./img/icon.png" alt="Tera Guard logo" class="footer__logo" />
       <p class="footer__copyright">
-        &copy; 2022, Tera Guard. All rights reserved.
+        &copy; 2022, <strong>Tera Guard</strong> by Md. Shohanur Rahman. All
+        rights reserved.
       </p>
     </footer>
 
