--- a/index.html
+++ b/index.html
@@ -211,10 +211,13 @@
               Free offline anti-virus solutions for you
             </h5>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
-              veritatis at doloribus voluptate, sit natus? Quisquam doloremque
-              excepturi magni dolorem molestiae earum, rem facilis omnis
-              pariatur, dolore quod, at est.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla
+              consequatur numquam amet repudiandae beatae officia saepe
+              architecto deleniti tempore suscipit repellendus, veniam odio
+              cupiditate ex, quos laboriosam assumenda doloribus quasi
+              molestiae, odit soluta ab laudantium. Pariatur autem asperiores,
+              quas iste dolorem eligendi itaque quos ab, consequuntur in nihil
+              assumenda ducimus!
             </p>
           </div>
 
@@ -239,10 +242,12 @@
               30 days free-trial available, no credit card required
             </h5>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Blanditiis atque delectus repellat earum corporis ipsam
-              recusandae. Voluptates, et ipsum nostrum animi optio delectus.
-              Repellat quam unde distinctio, adipisci quos temporibus.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+              inventore velit possimus voluptas dolorum porro totam, ab dolorem
+              deleniti, enim error, consequatur officia? Sed ullam dolorum quae
+              officiis cumque iste ut pariatur accusantium debitis rem, dolorem
+              quos veniam nam autem corrupti aliquid perferendis nulla fuga
+              vitae sapiente possimus magnam animi!
             </p>
           </div>
           <div class="operations__content operations__content--3">
@@ -262,15 +267,14 @@
                 />
               </svg>
             </div>
-            <h5 class="operations__header">
-              Money back guarantee at any time between the free-trials
-            </h5>
+            <h5 class="operations__header">Money back guarantee at any time</h5>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-              quaerat autem eligendi necessitatibus, blanditiis inventore hic
-              repellendus unde corrupti nesciunt accusamus recusandae
-              voluptatibus. Voluptatum natus temporibus, laboriosam voluptates
-              sapiente atque?
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta
+              blanditiis odit nostrum ullam harum minima cumque voluptas
+              mollitia ipsam maxime! Aliquam consequuntur magnam eligendi
+              laborum corrupti nesciunt quos sit, doloremque fuga blanditiis
+              commodi culpa rem accusantium esse voluptatem ut asperiores?
+              Mollitia molestiae sunt at, ut ea rem sed? Odio, nobis.
             </p>
           </div>
         </div>
