--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="section--0">
       <!-- Navbar -->
       <nav class="nav">
         <img
@@ -26,6 +26,9 @@
           id="logo"
         />
         <ul class="nav__links">
+          <li class="nav__item">
+            <a class="nav__link" href="#section--0">Home</a>
+          </li>
           <li class="nav__item">
             <a class="nav__link" href="#section--1">Features</a>
           </li>
