--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     />
     <!-- Custom stylesheet -->
     <link rel="stylesheet" href="./style.css" />
+    <!-- Script file -->
+    <script defer src="./script.js"></script>
   </head>
   <body>
     <header class="header" id="section--0">
@@ -435,8 +437,5 @@
       </p>
       <button class="btn cookie__close">Okay</button>
     </div>
-
-    <!-- Script file -->
-    <script src="./script.js"></script>
   </body>
 </html>
