--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- Custom stylesheet -->
     <link rel="stylesheet" href="./style.css" />
     <!-- Script file -->
-    <script defer src="./script.js"></script>
+    <script type="module" defer src="./script.js"></script>
   </head>
   <body>
     <header class="header" id="section--0">
@@ -94,11 +94,7 @@
         </div>
 
         <div class="features">
-          <img
-            src="./img/secure-lazy.jpg"
-            data-src="./img/secure.jpg"
-            class="features__img lazy-img"
-          />
+          <img src="./img/secure.jpg" class="features__img lazy-img" />
           <div class="features__feature">
             <div class="features__icon">
               <svg
@@ -150,17 +146,9 @@
               voluptatem dicta, accusantium quisquam.
             </p>
           </div>
-          <img
-            src="./img/powerful-lazy.jpg"
-            data-src="./img/powerful.jpg"
-            class="features__img lazy-img"
-          />
+          <img src="./img/powerful.jpg" class="features__img lazy-img" />
 
-          <img
-            src="./img/simple-lazy.jpg"
-            data-src="./img/simple.jpg"
-            class="features__img lazy-img"
-          />
+          <img src="./img/simple.jpg" class="features__img lazy-img" />
           <div class="features__feature">
             <div class="features__icon">
               <svg
